[project]
name = "fm_nodes"
description = "A collection of ComfyUI nodes. Including: WFEN, RealViFormer, ProPIH"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["torch", "einops"]

[project.urls]
Repository = "https://github.com/FuouM/FM_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fuoumarinas"
DisplayName = "FM_nodes"
Icon = ""
