[project]
name = "fm_nodes"
description = "An expanding collection of ComfyUI nodes focused on new papers. Including: WFEN, RealViFormer, ProPIH, CoLIE, VFIMamba, ConvIR, StabStitch"
version = "1.0.6"
license = {file = "LICENSE"}
dependencies = ["torch", "einops"]

[project.urls]
Repository = "https://github.com/FuouM/FM_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fuoumarinas"
DisplayName = "FM_nodes"
Icon = ""
